Closed Bug 1060974 Opened 10 years ago Closed 10 years ago

Fix more bad implicit constructors in places

Categories

(Toolkit :: Places, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

      No description provided.
Assignee: nobody → ehsan.akhgari
Blocks: explicit
Attachment #8481988 - Flags: review?(mak77)
Attachment #8481988 - Flags: review?(mak77) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/bb0422a742ed

marking this manually since i guess ehsan was running into bug 1062305
https://hg.mozilla.org/mozilla-central/rev/bb0422a742ed
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: