Bug 1060974 - Fix more bad implicit constructors in places; r=mak

--HG--
extra : rebase_source : c8d465b4de55d000d1475994827766e33396ff12